@@ -10,6 +10,7 @@ HISTORY
     - escape key handling added to break the boot time script execution
     - winx_kb_read() call added to zenwinx library
     - corrected cluttered progress display if console output was redirected
+    - optimized timeout for waiting for a keyboard event
     RC1:
     - partial defragmentation was added to decrease number of fragments
       even when there are no free space on disk
